# ckanext-versioned-datastore

./: .coveragerc  .cz.toml  .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  dev_requirements.txt  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.ini
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: main.yml  tests.yml
ckanext/versioned_datastore/: cli.py  commands.py  helpers.py  interfaces.py  plugin.py
ckanext/versioned_datastore/commands/: initdb.py
ckanext/versioned_datastore/controllers/: datastore.py
ckanext/versioned_datastore/lib/: common.py  datastore_utils.py  details.py  geo.py  importing.py  indexing.py  ingesting.py  multisearch.py  queuing.py  search.py  stats.py  tasks.py  utils.py
ckanext/versioned_datastore/lib/basic_query/: geo.py  search.py  utils.py
ckanext/versioned_datastore/lib/downloads/: core_generator.py  download.py  jsonl.py  loaders.py  query.py  sv.py  transform.py  utils.py  xlsx.py
ckanext/versioned_datastore/lib/importing/: details.py  importing.py  indexing.py  ingest.py  options.py  queuing.py  readers.py  stats.py  tasks.py  utils.py
ckanext/versioned_datastore/lib/indexing/: indexing.py
ckanext/versioned_datastore/lib/ingestion/: deletion.py  exceptions.py  feeders.py  ingesting.py  readers.py  records.py  utils.py
ckanext/versioned_datastore/lib/query/: __init__.py  fields.py  query_log.py  schema.py  slug_words.py  slugs.py  utils.py  v1_0_0.py
ckanext/versioned_datastore/logic/: action.py  auth.py  schema.py  validators.py
ckanext/versioned_datastore/logic/actions/: basic_search.py  crud.py  downloads.py  extras.py  help.py  multisearch.py  utils.py
ckanext/versioned_datastore/logic/basic/: action.py  auth.py  helptext.py  schema.py  utils.py
ckanext/versioned_datastore/logic/data/: action.py  auth.py  helptext.py  schema.py
ckanext/versioned_datastore/logic/download/: action.py  arg_objects.py  auth.py  helptext.py  schema.py
ckanext/versioned_datastore/logic/multi/: __init__.py  action.py  auth.py  groups.py  helptext.py  schema.py  utils.py
ckanext/versioned_datastore/logic/options/: action.py  auth.py  helptext.py  schema.py
ckanext/versioned_datastore/logic/resource/: action.py  auth.py  helptext.py  schema.py
ckanext/versioned_datastore/logic/schema/: action.py  auth.py  helptext.py  schema.py
ckanext/versioned_datastore/logic/slug/: action.py  auth.py  helptext.py  schema.py
ckanext/versioned_datastore/logic/version/: action.py  auth.py  helptext.py  schema.py
ckanext/versioned_datastore/migration/versioned_datastore/: alembic.ini  env.py
ckanext/versioned_datastore/model/: details.py  downloads.py  slugs.py  stats.py
ckanext/versioned_datastore/routes/: __init__.py  datastore.py  downloads.py  search.py  status.py
ckanext/versioned_datastore/tests/: requirements.txt  test_action_utils.py  test_basic_query_utils.py  test_datastore_utils.py  test_geo.py  test_helpers.py  test_multisearch.py  test_query.py  test_records.py  test_search.py  test_utils.py  test_v1_0_0.py
ckanext/versioned_datastore/tests/lib/: test_utils.py
ckanext/versioned_datastore/tests/testSchemas/: v0.1.3.json  v1.70.0.json
ckanext/versioned_datastore/theme/assets/: webassets.yml
ckanext/versioned_datastore/theme/fanstatic/: resource.config
docker/: Dockerfile
docs/: index.md
docs/_scripts/: gen_api_pages.py
docs/usage/: actions.md
docs/usage/downloads/: examples.md  index.md  options.md
tests/: conftest.py  test_action_utils.py  test_basic_query_utils.py  test_crud.py  test_datastore_utils.py  test_download.py  test_geo.py  test_helpers.py  test_query.py  test_records.py  test_search.py  test_v1_0_0.py  test_xlsx_downloader.py
tests/helpers/: data.py  patches.py  utils.py
tests/integration/downloads/: test_downloads.py
tests/unit/: test_helpers.py
tests/unit/lib/: test_datastore_utils.py  test_utils.py
tests/unit/logic/: test_validators.py
(+127 files in other folders)
