[metadata]
name = ckanext-versioned-datastore
version = 3.6.0
description = A CKAN extension providing a versioned datastore using MongoDB and Elasticsearch
long_description = file: README.md
license_files = LICENSE
author = Natural History Museum
author_email = data@nhm.ac.uk
url = https://github.com/NaturalHistoryMuseum/ckanext-versioned-datastore
keywords = CKAN data elastic versioning
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    backports.csv==1.0.6
    cchardet==2.1.4
    openpyxl==2.5.8
    requests
    six>=1.11.0
    xlrd==1.1.0
    elasticsearch>=6.0.0,<7.0.0
    elasticsearch-dsl>=6.0.0,<7.0.0
    jsonschema==3.0.0
    pandas==1.4.1
    fastavro==1.5.4
    eevee @ git+https://github.com/NaturalHistoryMuseum/eevee@v1.2.3#egg=eevee-1.2.3
    ckantools @ git+https://github.com/NaturalHistoryMuseum/ckantools.git

[options.extras_require]
test =
    mock
    pytest>=4.6.5
    pytest-cov>=2.7.1
    coveralls

[options.packages.find]
exclude =
    tests

[options.entry_points]
ckan.plugins =
    versioned_datastore = ckanext.versioned_datastore.plugin:VersionedSearchPlugin
